[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noblepay-compliance"
version = "0.1.0"
description = "NoblePay compliance and analytics toolkit — ML risk scoring, anomaly detection, and regulatory reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aethelred", email = "dev@aethelred.io" }]

dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
